stryker/Metadata/unpackaged/objects/course__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <label>Faculty Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Strart_Date__c</fullName>
        <label>Strart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>course_name__c</fullName>
        <label>course name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BIGDATA</fullName>
                </value>
                <value>
                    <fullName>DATASEINCE</fullName>
                </value>
                <value>
                    <fullName>DOTNET</fullName>
                </value>
                <value>
                    <fullName>HADOOP</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>PEGA</fullName>
                </value>
                <value>
                    <fullName>PYTHON</fullName>
                </value>
                <value>
                    <fullName>SALESFORSE</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>c-{0000}</displayFormat>
        <label>course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>